deploy/servicemesh/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: est-gateway
  namespace: est
  labels:
    app: est-gateway
    app.kubernetes.io/name: est-gateway
    app.kubernetes.io/part-of: est-framework
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "est-app.example.com"
    - "*.est-app.example.com"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "est-app.example.com"
    - "*.est-app.example.com"
    tls:
      mode: SIMPLE
      credentialName: est-web-app-tls
      minProtocolVersion: TLSV1_2
      maxProtocolVersion: TLSV1_3
      cipherSuites:
      - ECDHE-ECDSA-AES128-GCM-SHA256
      - ECDHE-RSA-AES128-GCM-SHA256
      - ECDHE-ECDSA-AES256-GCM-SHA384
      - ECDHE-RSA-AES256-GCM-SHA384
